@@ -1,4 +1,4 @@
-[![Actions Status](https://github.com/lizmat/ValuePair/actions/workflows/test.yml/badge.svg)](https://github.com/lizmat/ValuePair/actions)
+[![Actions Status](https://github.com/lizmat/ValuePair/actions/workflows/linux.yml/badge.svg)](https://github.com/lizmat/ValuePair/actions) [![Actions Status](https://github.com/lizmat/ValuePair/actions/workflows/macos.yml/badge.svg)](https://github.com/lizmat/ValuePair/actions) [![Actions Status](https://github.com/lizmat/ValuePair/actions/workflows/windows.yml/badge.svg)](https://github.com/lizmat/ValuePair/actions)
 
 NAME
 ====
@@ -21,8 +21,6 @@ set($a, $b, $c);  # elems == 1
 DESCRIPTION
 ===========
 
-The functionality provided by this module, will most likely be provided in language level 6.e and higher. If an implementation of ValuePair is already available, loading this module becomes a no-op.
-
 Raku provides a semi-immutable `Pair` datatype, where the value of a Pair object can be a container, and thus mutable. Therefore, a standard Pair is **not** a value type. The `ValuePair` class provided by this module, is a subclass of `Pair`, and does not allow a mutable value. And thus it can be a value type.
 
 The `.new` method either accepts two positional arguments (key and value), or `key` and `value` named arguments, or an existing `Pair`.
@@ -39,7 +37,7 @@ If you like this module, or what I’m doing more generally, committing to a [sm
 COPYRIGHT AND LICENSE
 =====================
 
-Copyright 2022 Elizabeth Mattijsen
+Copyright 2022, 2024 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
