@@ -6,4 +6,6 @@ filename = lib/ValuePair.rakumod
 [UploadToZef]
 
 [Badges]
-provider = github-actions/test.yml
+provider = github-actions/linux.yml
+provider = github-actions/macos.yml
+provider = github-actions/windows.yml
